--- a/tasklauncher-local-app-dependencies/pom.xml
+++ b/tasklauncher-local-app-dependencies/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tasklauncher-local-app-dependencies</artifactId>
-    <version>1.1.1.RELEASE</version>
+    <version>1.1.2.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>tasklauncher-local-app-dependencies</name>
     <description>Spring Cloud Stream Time App Dependencies</description>
@@ -24,7 +24,7 @@
             <dependency>
                 <groupId>org.springframework.cloud.stream.app</groupId>
                 <artifactId>spring-cloud-starter-stream-sink-task-launcher-local</artifactId>
-                <version>1.1.1.RELEASE</version>
+                <version>1.1.2.BUILD-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
