--- a/spring-cloud-starter-stream-sink-task-launcher-local/pom.xml
+++ b/spring-cloud-starter-stream-sink-task-launcher-local/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
 		<artifactId>tasklauncher-local-app-starters-build</artifactId>
-		<version>1.3.0.BUILD-SNAPSHOT</version>
+		<version>1.3.0.RC1</version>
 	</parent>
 
 	<artifactId>spring-cloud-starter-stream-sink-task-launcher-local</artifactId>
