--- a/tasklauncher-local-app-dependencies/pom.xml
+++ b/tasklauncher-local-app-dependencies/pom.xml
@@ -16,8 +16,9 @@
     </parent>
 
     <properties>
-        <spring-cloud-deployer-spi.version>1.2.0.RELEASE</spring-cloud-deployer-spi.version>
-        <spring.cloud.task.version>1.2.0.RELEASE</spring.cloud.task.version>
+        <spring-cloud-deployer-spi.version>1.3.0.RELEASE</spring-cloud-deployer-spi.version>
+        <spring-cloud-deployer-local.version>1.3.2.RELEASE</spring-cloud-deployer-local.version>
+        <spring.cloud.task.version>2.0.0.M2</spring.cloud.task.version>
     </properties>
 
     <dependencyManagement>
@@ -40,7 +41,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-deployer-local</artifactId>
-                <version>${spring-cloud-deployer-spi.version}</version>
+                <version>${spring-cloud-deployer-local.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
