--- a/tasklauncher-local-app-dependencies/pom.xml
+++ b/tasklauncher-local-app-dependencies/pom.xml
@@ -9,7 +9,7 @@
     <description>Spring Cloud Stream Tasklauncher local App Dependencies</description>
 
     <parent>
-		<artifactId>spring-cloud-dependencies-parent</artifactId>
+	<artifactId>spring-cloud-dependencies-parent</artifactId>
         <groupId>org.springframework.cloud</groupId>
         <version>2.0.0.RELEASE</version>
         <relativePath />
@@ -18,7 +18,7 @@
     <properties>
         <spring-cloud-deployer-spi.version>1.3.1.RELEASE</spring-cloud-deployer-spi.version>
         <spring-cloud-deployer-local.version>1.3.4.RELEASE</spring-cloud-deployer-local.version>
-        <spring.cloud.task.version>2.0.0.RC1</spring.cloud.task.version>
+        <spring.cloud.task.version>2.0.0.RELEASE</spring.cloud.task.version>
     </properties>
 
     <dependencyManagement>
