--- a/tasklauncher-local-app-dependencies/pom.xml
+++ b/tasklauncher-local-app-dependencies/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <spring-cloud-deployer-spi.version>1.3.1.RELEASE</spring-cloud-deployer-spi.version>
         <spring-cloud-deployer-local.version>1.3.4.RELEASE</spring-cloud-deployer-local.version>
-        <spring.cloud.task.version>2.0.0.RELEASE</spring.cloud.task.version>
+        <spring.cloud.task.version>2.1.0.M2</spring.cloud.task.version>
     </properties>
 
     <dependencyManagement>
