--- a/tasklauncher-local-app-dependencies/pom.xml
+++ b/tasklauncher-local-app-dependencies/pom.xml
@@ -16,9 +16,9 @@
     </parent>
 
     <properties>
-        <spring-cloud-deployer-spi.version>1.3.1.RELEASE</spring-cloud-deployer-spi.version>
-        <spring-cloud-deployer-local.version>1.3.4.RELEASE</spring-cloud-deployer-local.version>
-        <spring.cloud.task.version>2.0.0.RELEASE</spring.cloud.task.version>
+        <spring-cloud-deployer-spi.version>2.0.0.M1</spring-cloud-deployer-spi.version>
+        <spring-cloud-deployer-local.version>2.0.0.M2</spring-cloud-deployer-local.version>
+        <spring.cloud.task.version>2.1.0.M2</spring.cloud.task.version>
     </properties>
 
     <dependencyManagement>
@@ -33,6 +33,11 @@
                 <artifactId>spring-cloud-task-stream</artifactId>
                 <version>${spring.cloud.task.version}</version>
             </dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-task-core</artifactId>
+				<version>${spring.cloud.task.version}</version>
+			</dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-deployer-spi</artifactId>
